fixed sidebar resizing causing overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,6 +70,14 @@
 /* #endregion Themes */
 
 
+:root {
+  --header-height: 55px;
+  --footer-height: 45px;
+
+  --sidebar-width: 350px;
+  --toolbar-width: 45px;
+}
+
 /* 
  * MARK: Body
  */
@@ -252,8 +260,8 @@ input[type="checkbox"]:checked + .custom-checkbox::before {
   height: 100vh;
 
   display: grid;
-  grid-template-columns:[sidebar] 350px [viewer] minmax(0, auto) [toolbar] 45px;
-  grid-template-rows: [header] 55px [viewer] minmax(0, auto) [footer] 45px;
+  grid-template-columns:[sidebar] var(--sidebar-width) [viewer] minmax(0, auto) [toolbar] var(--toolbar-width);
+  grid-template-rows: [header] var(--header-height) [viewer] minmax(0, auto) [footer] var(--footer-height);
   
   grid-template-areas:
         "header header header"
@@ -267,7 +275,7 @@ input[type="checkbox"]:checked + .custom-checkbox::before {
   grid-area: sidebar;
 }
 .viewer {
-  max-width: calc(100vw - 350px - 45px);
+  max-width: calc(100vw - var(--sidebar-width) - var(--toolbar-width));
   grid-area: viewer;
   position: relative;
 }
